--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,21 +4,6 @@
 @import url("https://use.typekit.net/emv3zbo.css");
 @import url("https://fonts.googleapis.com/css?family=Fira Code");
 
-@font-face{
-	font-family: hershey-light;
-	src: url(../webfonts/AVHersheySimplexLight.ttf)
-}
-
-@font-face{
-	font-family: hershey-medium;
-	src: url(../webfonts/AVHersheySimplexMedium.ttf)
-}
-
-@font-face{
-	font-family: hershey-heavy;
-	src: url(../webfonts/AVHersheySimplexHeavy.ttf)
-}
-
 html {
 	scroll-behavior: smooth;
 	scroll-margin-top: 100px;
@@ -72,9 +57,10 @@ body, input, select, textarea, footer, header {
 	color: var(--white);
 	background-color: var(--base03);
 	font-family: 'Fira Code'; 
-	font-size: 20pt;
+	font-family: monaco;
+	font-size: 18pt;
 	font-weight: 400;
-	line-height: 1.75em;
+	line-height: 0px;
 
 	margin:auto; 
 	max-width: 100vw;
@@ -83,6 +69,8 @@ body, input, select, textarea, footer, header {
 body{
 	padding-top: 30px;
 	padding-bottom: 0px;
+
+	font-size: 15pt;
 
 	align-items: center;
 
@@ -134,7 +122,7 @@ a:hover {
 	outline-color: var(--base03);
 	background-color: var(--base03);
 
-	z-index: 5;
+	z-index: 10;
   }
 
 /* Style the navbar links */
@@ -254,6 +242,8 @@ a:hover {
 
 	width: 70vw;
 	/* height: calc(100vh - 120px); */
+	
+	/* min-height: 100vh; */
 	height: auto;
 
 	background-color: auto;
@@ -273,6 +263,7 @@ div.row.black{
 div.row.break{
 	align-items: center; 
 	justify-content: center; 
+	min-height: 0px;
 	height: 50px;
 	width: 100vw;
 	grid-column-start: 1;
@@ -317,14 +308,23 @@ div.row.right{
 	padding: 0;
 	text-align: left;
 
-	line-height: 75px;
-	font-size: 30px;
+	line-height: 1.5em;
+	font-size: 20px;
 
 	margin: 0;
 
 	background-color: inherit;
 
 	height: fit-content;
+
+	min-width: 200px;
+	max-width: 500px
+}
+
+.row > div.header {
+	width: 100%; 
+	max-width: 100vw; 
+	margin-bottom: 2vh;
 }
 
 
@@ -334,6 +334,7 @@ h1{
 	
 	font-size: 30px;
 	font-weight: 700;
+	line-height: 75px;
 	background-color: var(--base3);
 
 	color: var(--base03);
@@ -347,11 +348,11 @@ h1{
 	width: fit-content;
 
 	margin-left: 10px;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 p{
-	font-size: x-large;
+	font-size: large;
 	padding: 0px;
 }
 
@@ -387,26 +388,22 @@ a img{
 	display:block;
 }
 
+@media screen and (max-width: 1150px) {
+	/* For mobile phones: */
 
-/* narrow screens */
-@media screen and (max-width: 1130px) {
-	body {
-		margin:auto; 
-		max-width: 100vw;
-	}
 
-	.main > div.row{
-
-		
-	}
-
-	.row > div{
-
-	}
 }
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 960px) {
 	/* For mobile phones: */
+
+
+}
+
+@media screen and (max-width: 767px) {
+	/* For mobile phones: */
+
+
 }
 
 .blinking-cursor1 {
