--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ section, summary, time, mark, audio, video {
 /* Basic Settings */
 
 body, input, select, textarea, footer, header {
-	color: var(--white);
+	color: var(--base2);
 	background-color: var(--base03);
 	font-family: 'Fira Code'; 
 	font-family: monaco;
@@ -83,12 +83,13 @@ body{
 /* LINK SETTINGS */
 
 a {
-	text-decoration: none
+	text-decoration: none;
+	color: var(--base3);
 }
 
 /* unvisited link */
 a:link {
-	color: var(--black);
+	color: var(--base2);
 	background-color: none;
 	text-decoration: none;
 }
@@ -109,7 +110,7 @@ a:hover {
 	justify-content: center;
 
 	position: fixed;
-	top: -100px; /* Hide the navbar 50 px outside of the top view */
+	top: -150px; /* Hide the navbar 50 px outside of the top view */
 	transition: top 0.3s; /* Transition effect when sliding down (and up) */
 	padding-top: 0px;
 
@@ -241,18 +242,14 @@ a:hover {
 	padding: 0;
 
 	width: 70vw;
-	/* height: calc(100vh - 120px); */
-	
-	/* min-height: 100vh; */
 	height: auto;
-
-	background-color: auto;
 }
 
-/* design for columns, one white one black */
+/* design for rows, one white one black */
 div.row.white{
 	background-color:var(--base3);
 	padding-top: 30px;
+	color: var(--base03);
 }
 
 div.row.black{
@@ -313,18 +310,40 @@ div.row.right{
 
 	margin: 0;
 
-	background-color: inherit;
-
 	height: fit-content;
 
+	min-width: 390px; 
+	width: 33vw;
+	max-width: 500px;
+	
+	margin:auto;
+}
+
+.row > div.pub{
 	min-width: 200px;
-	max-width: 500px
+	width: 350px; 
+	margin: 20px 20px 20px 0px;
 }
 
 .row > div.header {
 	width: 100%; 
 	max-width: 100vw; 
 	margin-bottom: 2vh;
+}
+
+.row > div.box{
+	text-align: center;
+	align-self: center;
+	justify-self: center;
+
+	font-size: large;
+
+	outline: 2px solid var(--base3);
+	box-shadow: 7px 7px 0 var(--base3);
+	background-color: var(--base03);
+
+	max-width: 800px;
+
 }
 
 
@@ -388,25 +407,80 @@ a img{
 	display:block;
 }
 
-@media screen and (max-width: 1150px) {
-	/* For mobile phones: */
+@media screen and (max-width: 1111px) {
+	/* For narrow screens: */
+	.main {
+		grid-template-columns: 15vw 70vw 15vw;
+	}
+
+	.main > div.row{
+		justify-content: center;
+		width: 70vw;
+	}
+
+	div.row.left{
+		width: 15vw;
+	}
+
+	div.row.break{
+
+		width: 100vw;
+	}
+	
+	div.row.right{
+		width: 15vw;
+	}
+
+	.row > div{
+		text-align: center;
+	}
+
+	h1{
+		margin:auto;
+	}
 
 
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 750px) {
 	/* For mobile phones: */
+	.main {
+		grid-template-columns: 5vw 90vw 5vw;
+	}
 
+	.main > div.row{
+		justify-content: center;
+		width: 90vw;
+	}
+
+	.row > div{
+		text-align: center;
+	}
+
+	div.header{
+		text-align: center;
+	}
+
+	div.row.left{
+		width: 5vw;
+	}
+
+	div.row.break{
+
+		width: 100vw;
+	}
+	
+	div.row.right{
+		width: 5vw;
+	}
+
+	h1{
+		margin:auto;
+	}
 
 }
 
-@media screen and (max-width: 767px) {
-	/* For mobile phones: */
-
-
-}
-
-.blinking-cursor1 {
+.blinking-cursor {
 
 	font-weight: 800;
 	font-size: 100%;
@@ -425,64 +499,10 @@ a img{
 	0% {
 		color: transparent;
 	}
-	25%{
+	50%{
 		color: var(--base3);
 	}
 	100%{
-		color:transparent;
-	}
-}
-
-.blinking-cursor2 {
-
-	font-weight: 800;
-	font-size: 100%;
-	color: var(--base3);
-	margin-left: 0px;
-
-	-webkit-animation: var(--time-animate) blink2 var(--animation-type) infinite;
-	-moz-animation: var(--time-animate) blink2 var(--animation-type) infinite;
-	-ms-animation: var(--time-animate) blink2 var(--animation-type) infinite;
-	-o-animation: var(--time-animate) blink2 var(--animation-type) infinite;
-	animation: var(--time-animate) blink2 var(--animation-type) infinite;
-}
-
-
-@keyframes blink2 {
-	0% {
 		color: transparent;
-	}
-	50% {
-		color: var(--base3);
-	}
-	100%{
-		color:transparent;
-	}
-}
-
-.blinking-cursor3 {
-
-	font-weight: 800;
-	font-size: 100%;
-	color: var(--base3);
-	margin-left: 0px;
-
-	-webkit-animation: var(--time-animate) blink3 var(--animation-type) infinite;
-	-moz-animation: var(--time-animate) blink3 var(--animation-type) infinite;
-	-ms-animation: var(--time-animate) blink3 var(--animation-type) infinite;
-	-o-animation: var(--time-animate) blink3 var(--animation-type) infinite;
-	animation: var(--time-animate) blink3 var(--animation-type) infinite;
-}
-
-
-@keyframes blink3 {
-	0%{
-		color:transparent;
-	}
-	75% {
-		color: var(--base3);
-	}
-	100%{
-		color:transparent;
 	}
 }
