final edits, first version ready

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,9 @@ html {
 	--textdark: #fdf6e3;
 	--textmed: #586e75;
 
+	--highlight-dark:rgb(225, 16, 121);
+	--highlight-light: yellow;
+
 	--animation-type: ease-in-out;
 	--time-animate: 3s
 	;
@@ -69,8 +72,8 @@ body, input, select, textarea, footer, header {
 
 mark {
 	font-style: italic;
-	background-color:#ff659f ;
-	background-color: var(--base01);
+	background-color: var(--highlight-dark) ;
+	/* background-color: var(--base01); */
 	color: var(--base3);
 	padding-left: 3px;
 	padding-right: 3px;
@@ -87,8 +90,12 @@ body{
 	margin-bottom: 0;
 }
 
-/* LINK SETTINGS */
+p{
+	font-size: large;
+	padding: 0px;
+}
 
+/* LINK SETTINGS */
 a {
 	text-decoration: none;
 	color: var(--base3);
@@ -98,17 +105,14 @@ a {
 a:link {
 	color: var(--base2);
 	background-color: none;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 a:hover {
 	color: var(--base1);
-	background-color: transparent;
-	text-decoration: none;
 }
 
 /* NAV BAR SETTINGS */
-
 .navbar {
 
 	display: flex;
@@ -133,13 +137,14 @@ a:hover {
 	overflow: hidden;
 
 	z-index: 1000;
-  }
+}
 
 /* Style the navbar links */
 .navbar > a{
 
 	background-color: var(--base03);
 	color: var(--base3);
+	text-decoration: none;
 
 	display: block;
 	text-align: center;
@@ -166,6 +171,8 @@ a:hover {
 .navbar .icon {
 	display: none;
 }
+/* NAVBAR END */
+
 
 /* FOOTER */
 .footer {
@@ -213,6 +220,7 @@ a:hover {
 .footer a:hover img{
 	filter: invert(0.9);
 }
+/* END FOOTER */
 
 
 /* creating a grid for the main content: 3 columns, column 1 and 3 are just for spacing. Content is in column 2 */
@@ -337,7 +345,7 @@ div.row.right{
 
 .row > div.pub{
 	min-width: 200px;
-	width: 350px; 
+	width: 400px; 
 	max-width: 90vw;
 	margin: 20px 20px 20px 0px;
 }
@@ -345,7 +353,29 @@ div.row.right{
 .pub mark{
 	font-style: normal;
 	color: var(--black);
-	background-color: yellow;
+	background-color: var(--highlight-light);
+}
+
+.pub a{
+	color: #000000;
+	text-decoration: none;
+}
+
+.pub a:hover{
+	color: var(--base1);
+}
+
+.row > div.outreach{
+	min-width: 300px;
+	width: 45%; 
+	max-width: 90vw;
+	margin: 20px 20px 20px 0px;
+}
+
+.outreach mark{
+	background-color: var(--highlight-light);
+	color: #000000;
+	font-style: normal;
 }
 
 .row > div.header {
@@ -390,13 +420,27 @@ h1{
 	width: fit-content;
 
 	margin-left: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
 }
 
-p{
-	font-size: large;
-	padding: 0px;
+h2{
+	font-size: 24px;
+	font-weight: 600;
+	font-style: italic;
+	line-height: 50px;
+	background-color: var(--highlight-dark);
+	
+	width: fit-content;
+	margin: auto;
+	margin-left: 0;
+	padding-right: 6px;
+	margin-bottom: 5px;
 }
+
+h2 a:hover{
+	color: var(--highlight-dark);
+}
+
 
 div.footer{
 	color:  var(--base3);
@@ -459,12 +503,17 @@ a img{
 	}
 
 	.row > div.pub{
-		width: 380px;
-		min-width: 380px;
+		width: 400px;
+		min-width: 400px;
 		text-align: center;
 	}
+	
+	.row > div.outreach{
+		width: 380px;
+		min-width: 380px;
+	}
 
-	h1{
+	h1, h2{
 		margin:auto;
 	}
 
