--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css?family=Fira Code");
 
 html {
-	scroll-behavior: smooth;
+	scroll-behavior: smooth !important;
 	scroll-margin-top: 100px;
   }
 
@@ -53,7 +53,9 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	scroll-behavior: smooth !important;
+}
 
 /* Basic Settings */
 
