--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 @import url("https://use.typekit.net/emv3zbo.css");
 @import url("https://fonts.googleapis.com/css?family=Fira Code");
 
-html {
+*, html {
 	scroll-behavior: smooth !important;
 	scroll-margin-top: 100px;
   }
@@ -54,7 +54,6 @@ section, summary, time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	scroll-behavior: smooth !important;
 }
 
 /* Basic Settings */
