--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,8 +62,8 @@ section, summary, time, mark, audio, video {
 body, input, select, textarea, footer, header {
 	color: var(--base2);
 	background-color: var(--base03);
-	font-family: 'Fira Code'; 
-	font-family: monaco,Consolas,Lucida Console,monospace;
+	font-family: 'Fira Code';
+	/* font-family: monaco, monospace; */
 	font-size: 18pt;
 	font-weight: 400;
 	line-height: 0px;
