added fira code source to repo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,39 @@
-@import url('https://fonts.cdnfonts.com/css/menlo');
-@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 @import url("https://use.typekit.net/emv3zbo.css");
-@import url("https://fonts.googleapis.com/css?family=Fira Code");
+@import url("/webfonts/");
 
 *, html {
 	scroll-behavior: smooth !important;
 	scroll-margin-top: -5px;
   }
+
+@font-face {
+	font-family: 'Fira Code';
+	src: url('webfonts/FiraCode-Medium.ttf') format('truetype');
+	font-weight: bolder;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Fira Code';
+	src: url('webfonts/FiraCode-Retina.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Fira Code';
+	src: url('webfonts/FiraCode-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Fira Code';
+	src: url('webfonts/FiraCode-Light.ttf') format('truetype');
+	font-weight: lighter;
+	font-style: normal;
+}
 
 
 /* defining base colors */
@@ -65,7 +91,7 @@ body, input, select, textarea, footer, header {
 	font-family: 'Fira Code';
 	/* font-family: monaco, monospace; */
 	font-size: 18pt;
-	font-weight: 400;
+	font-weight: normal;
 	line-height: 0px;
 
 	margin:auto; 
@@ -101,7 +127,7 @@ p {
 
 p.name{
 	font-size:45px; 
-	font-weight: 900; 
+	font-weight: bolder; 
 	font-style:italic; 
 	line-height: 120%; 
 	padding: 0;
@@ -109,7 +135,7 @@ p.name{
 
 p.title{
 	font-size: 20px; 
-	font-weight: 500; 
+	font-weight: bold; 
 	margin-top: 3%; 
 	font-style:normal; 
 	line-height: 100%; 
@@ -118,7 +144,7 @@ p.title{
 
 p.titlecontact{
 	font-size: 20px; 
-	font-weight: 500; 
+	font-weight: normal; 
 	margin-top: 50px; 
 	font-style:normal;
 	line-height: 140%;
@@ -127,7 +153,7 @@ p.titlecontact{
 h1{
 	
 	font-size: 30px;
-	font-weight: 700;
+	font-weight: bold;
 	line-height: 250%;
 	background-color: var(--base3);
 
@@ -147,7 +173,7 @@ h1{
 
 h2{
 	font-size: 24px;
-	font-weight: 500;
+	font-weight: normal;
 	font-style: italic;
 	line-height: 200%;
 
@@ -652,7 +678,7 @@ a img{
 
 .blinking-cursor {
 
-	font-weight: 800;
+	font-weight: bolder;
 	font-size: 100%;
 	color: var(--base3);
 	margin-left: 0px;
