--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,7 +200,7 @@ img.profile{
 	padding-top: 10px;
 	margin: auto;
 
-	border-radius: 30%;
+	border-radius: 25%;
 }
 
 /* LINK SETTINGS */
@@ -439,7 +439,7 @@ div.row.right{
 	width: 45%; 
 	max-width: 90vw;
 	margin: 0px 20px 20px 0px;
-	text-align: justify;
+	text-align: left;
 }
 
 .outreach mark{
@@ -550,7 +550,7 @@ a img{
 	.row > div.outreach{
 		width: 380px;
 		min-width: 300px;
-		text-align: justify;
+		text-align: center;
 	}
 
 	h1, h2{
@@ -604,7 +604,7 @@ a img{
 		width: 350px;
 		min-width: 300px;
 		max-width: 90vw;
-		text-align: justify;
+		text-align: center;
 	}
 
 	h1{
