--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,621 +85,61 @@ section, summary, time, mark, audio, video {
 
 }
 
+
 /* Basic Settings */
-
-body, input, select, textarea, footer, header {
-	color: var(--base2);
-	background-color: var(--base03);
-
-	margin:auto; 
-	max-width: 100vw;
-}
-
-/* TEXT FORMATTING */
-
-mark {
-	font-style: italic;
-	background-color: var(--highlight-dark) ;
-	/* background-color: var(--base01); */
-	color: var(--base3);
-	padding-left: 3px;
-	padding-right: 3px;
-}
-
-body{
-	padding-top: 30px;
-	padding-bottom: 0px;
-	font-size: 15pt;
-	align-items: center;
-	margin-bottom: 0;
-}
-
-p {
-	font-size: large;
-	padding: 0px;
-	line-height: 160%;
-}
-
-p.name{
-	font-size:45px; 
-	font-weight: bolder; 
-	font-style:italic; 
-	line-height: 120%; 
-	padding: 0;
-}
-
-p.title{
-	font-size: 20px; 
-	font-weight: bold; 
-	margin-top: 3%; 
-	font-style:normal; 
-	line-height: 100%; 
-	padding: 0;
-}
-
-p.titlecontact{
-	font-size: 20px; 
-	font-weight: normal; 
-	margin-top: 50px; 
-	font-style:normal;
-	line-height: 140%;
-}
-
 h1{
-	
-	font-size: 30px;
-	font-style: italic;
+	font-size:x-large;
 	font-weight: 700;
-	line-height: 250%;
-	background-color: var(--base3);
-
-	color: var(--base03);
-
-	padding-left: 10px;
-	padding-right: 10px;
-
-	transform: skewX(-10deg);
-
-	height: 250%;
-	width: fit-content;
-
-	margin-left: 7px;
-	margin-bottom: 0px;
+	font-style: italic;
 }
 
 h2{
-	font-size: 24px;
-	font-weight: normal;
-	font-style: italic;
-
-	line-height: 200%;
-	background-color: var(--highlight-dark);
-	width: fit-content;
-
-	padding-right: 6px;
-	margin: auto;
-	margin-left: 0;
-	margin-bottom: 10px;
-}
-
-h2 a:hover{
-	color: var(--highlight-dark);
-}
-
-img.logo{
-	height:100px; 
-	padding-bottom: 10px;
-}
-
-img.profile{
-	object-fit: cover; 
-	width: 90%; 
-	padding-top: 10px;
-	margin: auto;
-
-	border-radius: 25%;
-}
-
-/* LINK SETTINGS */
-a {
-	text-decoration: none;
-	color: var(--base3);
-}
-
-/* unvisited link */
-a:link {
-	color: var(--base2);
-	background-color: none;
-	text-decoration: underline;
-}
-
-a:hover {
-	color: var(--base1);
-}
-
-/* NAV BAR SETTINGS */
-.navbar {
-
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-
-	position: fixed;
-	top: 0px; /* Hide the navbar 50 px outside of the top view */
-	transition: top 0.3s; /* Transition effect when sliding down (and up) */
-	padding-top: 0px;
-
-	max-width: 100vw;
-	width: 100vw; /* Full width */
-
-	box-shadow: 0 5px 0 var(--base3);
-	outline-style: solid;
-	outline-width: 0px;
-	outline-color: var(--base03);
-	background-color: var(--base03);
-
-	overflow: hidden;
-
-	z-index: 1000;
-}
-
-/* Style the navbar links */
-.navbar > a{
-
-	background-color: var(--base03);
-	color: var(--base3);
-	text-decoration: none;
-
-	display: block;
-	text-align: center;
-	float: center;
-	padding: 10px;
-	padding-top: 20px;
-	padding-bottom: 10px;
-	font-size: 18px;
-
-	width: 120px;
-	margin: 0;
-	line-height: 40px;
-}
-
-.navbar a:hover {
-	background-color: var(--base3);
-	color: var(--base03);
-}
-
-.navbar a:hover img{
-	filter: invert(0.9);
-}
-
-.navbar .icon {
-	display: none;
-}
-/* NAVBAR END */
-
-
-/* creating a grid for the main content: 3 columns, column 1 and 3 are just for spacing. Content is in column 2 */
-.main {
-	padding-top: 0px;
-
-	display: grid;
-	column-count: 3;
-	grid-template-columns: 15vw 70vw 15vw;
-
-	gap: 0px 0px;
-
-	width: 100vw;
-
-	position: relative;
-	min-height: 85vh;
-
-	margin:0;
-	padding-bottom: 0;
-
-	overflow: hidden;
-	
-}
-
-/* defining flexboxes for each row */
-.main > div.row{
-
-	grid-row-start: auto;
-	grid-row-end: auto;
-	grid-column-start: 2;
-	grid-column-end: 2;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-
-	justify-content: start;
-	align-content: flex-start;
-
-	margin: 0;
-
-	padding: 0;
-
-	width: 70vw;
-	height: auto;
-
-	z-index: 10;
-}
-
-/* design for rows, one white one black */
-div.row.white{
-	background-color:var(--base3);
-	padding-top: 30px;
-	color: var(--base03);
-}
-
-div.row.black{
-	padding-top: 30px;
-}
-
-div.row.black.landing{
-	height:auto; 
-	min-height: 100vh; 
-	padding-top: 0px; 
-	margin: auto;
-	justify-content: center; 
-	align-content:flex-end;
-}
-
-/* between each row, a small break such that navbar doesn't hide the subheadings */
-div.row.break{
-	align-items: center; 
-	justify-content: center; 
-	min-height: 0px;
-	height: 5px;
-	width: 100vw;
-	grid-column-start: 1;
-	grid-column-end: 3;
-}
-
-
-/* filling in the left and right columns */
-div.row.left{
-	grid-row-start: auto;
-	grid-row-end: auto span 1;
-	grid-column-start: 1;
-	grid-column-end: 1;
-
-	padding-top: 30px;
-	/* height: calc(100vh - 120px); */
-	height: auto;
-	width: 15vw;
-
-	background-color: var(--base3);
-}
-
-div.row.right{
-	grid-row-start:inherit;
-	grid-row-end: auto span 1;
-	grid-column-start: 3;
-	grid-column-end: 3;
-
-	padding-top: 30px;
-	/* height: calc(100vh - 120px); */
-	height: auto;
-	width: 15vw;
-
-	background-color: var(--base3);
-}
-
-/* might have to add another row element here such that the first one is the background, and the second one actually contains all the content */
-
-/* defining each item within the flexbox */
-.row > div{
-
-	padding: 0;
-	text-align: left;
-
-	line-height: 1.5em;
-	font-size: 20px;
-
-	margin: 0;
-
-	height: fit-content;
-
-	min-width: 380px; 
-	width: 33vw;
-	max-width: 90vw;
-	
-	margin:auto;
-}
-
-.row > div.pub{
-	min-width: 200px;
-	width: 45%; 
-	max-width: 90vw;
-	margin: 0px 20px 20px 0px;
-	/* text-align: justify; */
-}
-
-.pub mark{
-	font-style: normal;
-	color: var(--black);
-	background-color: var(--highlight-light);
-}
-
-.pub a{
-	color: #000000;
-	text-decoration: none;
-}
-
-.pub a:hover{
-	color: var(--base1);
-}
-
-.row > div.outreach{
-	min-width: 200px;
-	width: 45%; 
-	max-width: 90vw;
-	margin: 0px 20px 20px 0px;
-	text-align: left;
-}
-
-.outreach mark{
-	background-color: var(--highlight-light);
-	color: #000000;
-	font-style: normal;
-}
-
-.row > div.header {
-	width: 100%; 
-	max-width: 100vw; 
-	margin-bottom: 2vh;
-}
-
-.row > div.box{
-	text-align: center;
-	align-self: center;
-	justify-self: center;
-
 	font-size: large;
-
-	outline: 2px solid var(--base3);
-	box-shadow: 7px 7px 0 var(--base3);
-	background-color: var(--base03);
-
-	min-width: 200px;
-	width: 800px; 
-
-
-	margin: auto;
-	margin-top: 5vh;
-	max-width: 90vw;
-
+	font-weight: 700;
+	font-style: italic;
 }
 
+/* end basic settings */
 
-div.footer{
-	color:  var(--base3);
-	font-size: 140%;
-	page-break-before: always;
-	padding-bottom: 0px;
-	text-align: center;
+/* structure */
+div.row{
+	width: 100vw;
+	min-height: 100vh;
 
-	position: absolute;
-	bottom: 0;
-
-	background-color: var(--base3);
-
-	width: 100%;
-	height: 2.5rem;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-a.copyright{
-	color:  var(--base2);
-	font-size: 100%;
-	break-before: always;
-	text-align: center;
+	div.row.landing{
+		background-image: linear-gradient(135deg, var(--arizona-red), var(--arizona-blue));
+	}
 
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 2.5rem;
+	div.row.image{
+		background-image: url('../../images/bh_image.png');
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;
+
+	}
+
+	div.row.one{
+		background-color: var(--warmgrey);
+	}
+
+	div.row.two{
+		background-color: var(--white);
+	}
+
+div.row > div{
+	width: 40%;
+	min-width: 300px;
+	max-width: 500px;
+
+	height: 40%;
+	min-height: 300px;
+	max-height: 500px;
+
+	background-color: #000000;
 }
 
-a img{
-	display:block;
-}
-
-@media screen and (max-width: 1111px) {
-	/* For narrow screens: */
-
-	div.landing{
-		margin-top: 100px;
-	}
-
-	.main {
-		grid-template-columns: 15vw 70vw 15vw;
-	}
-
-	.main > div.row{
-		justify-content: center;
-		width: 70vw;
-	}
-
-	div.row.left{
-		width: 15vw;
-	}
-
-	div.row.break{
-
-		width: 100vw;
-	}
-	
-	div.row.right{
-		width: 15vw;
-	}
-
-	.row > div{
-		text-align: center;
-	}
-
-	.row > div.pub{
-		width: 380px;
-		min-width: 300px;
-		/* text-align: justify; */
-	}
-	
-	.row > div.outreach{
-		width: 380px;
-		min-width: 300px;
-		text-align: center;
-	}
-
-	h1, h2{
-		margin:auto;
-		margin-bottom: 5px;
-	}
-
-	img.logo{
-		margin-top: 70px;
-	}
-
-
-}
-
-@media screen and (max-width: 750px) {
-	/* For mobile phones: */
-	.main {
-		grid-template-columns: 5vw 90vw 5vw;
-	}
-
-	.main > div.row{
-		justify-content: center;
-		width: 90vw;
-	}
-
-	.row > div{
-		text-align: center;
-	}
-
-	div.header{
-		text-align: center;
-	}
-
-	div.row.left, div.row.right{
-		width: 5vw;
-	}
-
-	div.row.break{
-
-		width: 100vw;
-	}
-
-	.row > div.pub{
-		width: 350px;
-		min-width: 300px;
-		max-width: 90vw;
-		/* text-align: justify; */
-	}
-
-	.row > div.outreach{
-		width: 350px;
-		min-width: 300px;
-		max-width: 90vw;
-		text-align: center;
-	}
-
-	h1{
-		font-size: 26px;
-		margin:auto;
-	}
-
-	h2{
-		font-size: 20px;
-		margin: auto;
-		margin-bottom: 5px;
-	}
-
-	p {
-		font-size: medium;
-		line-height: 150%;
-	}
-
-	p.name{
-		font-size: 36px; 
-		font-style: italic;
-	}
-
-	p.title, p.titlecontact{
-		font-size: 18px;
-	}
-
-	img.logo{
-		height: 80px;
-		margin-top: 70px;
-	}
-
-	img.profile{
-		width: 80%;
-		margin-top: 30px;
-	}
-
-	.navbar{
-		justify-content: left;
-		height: fit-content;
-	}
-
-	.navbar a:not(:first-child){
-		display: none;
-	}
-	.navbar a.icon {
-		margin: auto;
-		margin-right: 0;
-		display: block;
-	}
-
-	.navbar.responsive {
-		position: fixed;
-		height: fit-content;
-		transition: 0.5s;
-	}
-	.navbar.responsive a:first-child{
-		width: 120px;
-		order: -3;
-	}
-
-	.navbar.responsive a {
-		display: block;
-		text-align: center;
-		width: 100vw;
-	}
-	.navbar.responsive .icon {
-		margin: auto;
-		order: -2;
-		margin-right: 0;
-		width: 120px;
-	}
-
-}
-
-.blinking-cursor {
-
-	font-weight: bolder;
-	font-size: 100%;
-	color: var(--base3);
-	margin-left: 0px;
-
-	-webkit-animation: var(--time-animate) blink var(--animation-type) infinite;
-	-moz-animation: var(--time-animate) blink var(--animation-type) infinite;
-	-ms-animation: var(--time-animate) blink var(--animation-type) infinite;
-	-o-animation: var(--time-animate) blink var(--animation-type) infinite;
-	animation: var(--time-animate) blink var(--animation-type) infinite;
-}
-
-
-@keyframes blink {
-	0% {
-		color: transparent;
-	}
-	50%{
-		color: var(--base3);
-	}
-	100%{
-		color: transparent;
-	}
-}
