--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,13 +88,13 @@ section, summary, time, mark, audio, video {
 
 /* Basic Settings */
 h1{
-	font-size:x-large;
-	font-weight: 700;
+	font-size:30pt;
+	font-weight: 900;
 	font-style: italic;
 }
 
 h2{
-	font-size: large;
+	font-size: 14pt;
 	font-weight: 700;
 	font-style: italic;
 }
@@ -107,21 +107,21 @@ div.row{
 	min-height: 100vh;
 
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
+	justify-content: center; /*align horizontal center*/
 }
 
 	div.row.landing{
-		background-image: linear-gradient(135deg, var(--arizona-red), var(--arizona-blue));
+		background-image: linear-gradient(135deg, var(--arizona-blue), var(--arizona-red));
 	}
 
-	div.row.image{
-		background-image: url('../../images/bh_image.png');
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center;
-
-	}
+		.landing a{
+			text-decoration: none;
+			color: var(--white);
+		}
+		.landing a:hover{
+			color: var(--sky);
+		}
 
 	div.row.one{
 		background-color: var(--warmgrey);
@@ -131,15 +131,18 @@ div.row{
 		background-color: var(--white);
 	}
 
-div.row > div{
-	width: 40%;
-	min-width: 300px;
-	max-width: 500px;
+	.row > div{
+		width: 40%;
+		min-width: 300px;
+		max-width: 500px;
 
-	height: 40%;
-	min-height: 300px;
-	max-height: 500px;
+		min-height: 300px;
 
-	background-color: #000000;
-}
+		/* background-color: var(--black); */
+
+		padding: 0px;
+		margin: 10px;
+
+		align-self: center;
+	}
 
