--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1,4 +1,6 @@
 @import url("https://use.typekit.net/sdh6jxb.css");
+@import url("fontawesome-all.min.css");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
 :root{
 	--white: white;
