--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,17 +157,14 @@ div.content{
 	width: 80%;
 	display: flex;
 	flex-flow: row wrap;
+	justify-content: left;
+	align-items: left;
 
 	background-color: #AAA;
 }
 
 .content > div{
 	min-height: 300px;
-
 	background-color: var(--coolgrey);
-
-	padding: 0px;
-	margin: 10px;
-	align-self:auto;
 }
 
