--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ section, summary, time, mark, audio, video {
 	font-family: "logic-monospace", mono;
 	font-family: gemeli-mono, sans-serif; */
 
-	font-family: ibm-plex-mono, serif;
+	font-family: ibm-plex-mono, monospace;
 	font-weight: 400;
 	font-style: normal;
 	font-size: normal;
@@ -106,65 +106,4 @@ h3{
 }
 
 /* end basic settings */
-
-/* structure */
-div.landing{
-	width: 100vw;
-	min-height: 100vh;
-
-	display: flex;
-	flex-flow: row-reverse wrap;
-
-	background-image: linear-gradient(135deg, var(--arizona-blue), var(--arizona-red));
-	justify-content: center; /*align horizontal center*/
-}
-
-.landing a{
-	text-decoration: none;
-	color: var(--white);
-}
-.landing a:hover{
-	color: var(--sky);
-}
-
-.landing > div{
-	width: 40%;
-	
-	min-width: 300px;
-	max-width: 500px;
-	min-height: 100px;
-
-	padding: 0px;
-	margin: 10px;
-
-	align-self: center;
-	text-align: center;
-
-	/* background-color: var(--coolgrey); */
-}
-
-div.row{
-	width: 100vw;
-	min-height:100px;
-
-	display: flex;
-	flex-flow: row wrap;
-
-	background-color: var(--warmgrey);
-}
-
-div.content{
-	width: 80%;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: left;
-	align-items: left;
-
-	background-color: #AAA;
-}
-
-.content > div{
-	min-height: 300px;
-	background-color: var(--coolgrey);
-}
 
