--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,12 @@
 
 *, html {
 	scroll-behavior: smooth !important;
-	scroll-margin-top: -5px;
+	scroll-margin-top: 0px;
   }
 
 
 
-/* defining base colors */
+/* root */
 :root{
 	--white: white;
 	--black: black;
@@ -47,62 +47,140 @@
 	--highlight-light: yellow;
 
 	--animation-type: ease-in-out;
-	--time-animate: 3s
-	;
-}
+	--time-animate: 3s;
 
-/* Reset everything first */
-html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
-	margin: auto;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	line-height: 150%;
-
-
-	/* font-family: "prestige-elite-std", monospace;
-	font-family: "ibm-plex-mono", sans-serif;
-	font-family: "logic-monoscript", mono;
-	font-family: "logic-monospace", mono;
-	font-family: gemeli-mono, sans-serif; */
-
-	font-family: ibm-plex-mono, monospace;
-	font-weight: 400;
+	font-family: "garamond-premier-pro-display", serif;
+	font-weight: 300;
 	font-style: normal;
-	font-size: normal;
-
 }
 
+.grid-container {
+	display: grid;
+	grid-template-columns: 10% 76% 10%;
+	column-gap: 2%;
+	row-gap: 20px;
+	background-color: var(--base2);
+	padding: 10px;
+	margin: 0px;
+  }
+  
+  .grid-container > div {
+	background-color: var(--base3);
+	text-align: center;
+	grid-column: span;
+	padding: 0px 0px;
+	font-size: 30px;
+  }
 
-/* Basic Settings */
-h1{
-	font-size:30pt;
-	font-weight: 900;
-	font-style: italic;
-}
+  div.navbar {
+	width: 100%;
+	grid-column: span 3;
+	background-color: white;
 
-h2{
-	font-size: 20pt;
-	font-weight: 700;
-	font-style: italic;
-}
+	display: grid;
+	grid-template-columns: 40% 44% 12%;
+	row-gap: 20px;
+	column-gap: 2%;
+	padding: 10px;
 
-h3{
-	font-size: 14pt;
-	font-weight: 700;
-	font-style: italic;
-}
+	position: fixed;
+	top: 0px;
+	align-items: center;
+  }
+
+  .navbar .icon {
+		display: none;
+  }
+
+  .title{
+	grid-column: 1;
+	text-align: left;
+	font-size: 30px;
+  }
+
+  .links {
+	grid-column: 2;
+	display: flex;
+	align-items: right;
+	justify-content: right;
+
+	font-size: 25px;
+  }
+
+  .links a{
+	margin: 0px 20px;
+	text-decoration: none;
+	color: black;
+  }
+
+  .links a:hover{
+	text-decoration: overline;
+  }
+
+
+  
+
+  div.landing{
+	  grid-column: 2;
+	  text-align: center;
+	  background-color: white;
+
+
+	  margin-top: 50px;
+	  min-height: 80vh;
+
+  }
+
+  div.section{
+
+	  grid-column: 2;
+	  text-align: center;
+
+	  background-color: white;
+	  min-height: 80vh;
+
+	  padding-top: 50px;
+  }
+
+
+  @media screen and (max-width: 750px) {
+	/* For mobile phones: */
+
+	.navbar{
+		justify-content: left;
+		height: fit-content;
+	}
+
+	.navbar links{
+		display: none;
+	}
+	.navbar a.icon {
+		margin: auto;
+		margin-right: 0;
+		display: block;
+	}
+
+	.navbar.responsive {
+		position: fixed;
+		height: fit-content;
+		transition: 0.5s;
+	}
+	.navbar.responsive a:first-child{
+		width: 120px;
+		order: -3;
+	}
+
+	.navbar.responsive a {
+		display: block;
+		text-align: center;
+		width: 100vw;
+	}
+	.navbar.responsive .icon {
+		margin: auto;
+		order: -2;
+		margin-right: 0;
+		width: 120px;
+	}
+  }
 
 /* end basic settings */
