--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,8 +54,22 @@
 	font-style: normal;
 
 	line-height: 1.15;
+
+	padding: 0;
+	margin: 0;
 }
 
+body{
+	padding: 0px;
+	margin: 0px;
+}
+
+/* text */
+p{
+	font-size: 24px;
+	font-weight: 300;
+	font-style: normal;
+}
 
 h1{
 	font-size: 70px;
@@ -76,18 +90,11 @@ h3{
 	font-style: normal;
 }
 
-body{
-	font-size: 24px;
-	font-weight: 300;
-	font-style: normal;
-}
-
 a{
 	color: var(--black);
 	text-decoration: underline;
 	text-decoration-thickness: 1px;
 	text-underline-offset: 4px;
-	
 }
 
 a:hover{
@@ -95,8 +102,9 @@ a:hover{
 }
 
 sup{
-	font-size: 11px;
+	font-size: 8px;
 }
+/* text end */
 
 div{
 	background-color: #fff;
@@ -106,11 +114,12 @@ div{
 /* grid for the entire website */
 .grid-container {
 	display: grid;
-	grid-template-columns: 10% 76% 10%;
+	grid-template-columns: 1fr 8fr 1fr;
 	column-gap: 2%;
-	row-gap: 20px;
 	background-color: white;
-	padding: 10px;
+
+	row-gap: 20px;
+	padding: 0px;
 	margin: 0px;
 }
   
@@ -149,12 +158,14 @@ div.navbar {
 }
 
 /* title/name in the top left */
-.title{
+.navbar .title{
 	grid-column: 1;
 	text-align: left;
-	font-size: 30px;
+	font-size: 28px;
 	display: flex;
 	align-items: left;
+
+	padding-left: 10px;
 }
 
 /* page links */
@@ -197,14 +208,13 @@ div.footer{
 	align-items: center;
 
 	min-height: 50px;
-	font-size: 16px;
 }
 
 div.landing{
 	grid-column: 2;
 
 	margin-top: 50px;
-	min-height: 80vh;
+	min-height: 85vh;
 
 	display: flex;
 	flex-direction: row;
@@ -220,23 +230,61 @@ div.landing{
 	min-width: 400px;
 }
 
+div.landing a{
+	text-decoration: none;
+}
+
+.landing a:hover{
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 4px;
+}
+
 div.section{
 
 	grid-column: 2;
 	text-align: left;
 
-	min-height: 80vh;
 	padding-top: 50px;
+	min-height: 80vh;
 
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+	align-items: flex-start;
+	justify-content: flex-start;
+}
+
+
+.section h1, .section .content, .section .image{
+	margin: 0;
+	padding: 0;
+	background-color: #eee;
+}
+
+/* subtitles have 100% width, so nothing is inline with it */
+.section h1{
+	width: 100%;
+	height: fit-content;
+}
+
+.section div.content{
+	width: 60%;
+	min-width: 500px;
 
 }
 
-.section .title{
-	width:100%;
+.section .image{
+	width: 40%;
+	min-width: 300px;
+	display: flex;          /* Make .image a flex container */
+	justify-content: center;  /* Horizontally center */
+	align-items: center; 
 }
 
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 850px) {
 	/* For mobile phones: */
 	.navbar .icon {
 		display:block;
@@ -246,6 +294,7 @@ div.section{
 	.navbar .title{
 		grid-column: span 3;
 		text-align: center;
+		padding-left: 0px;
 	}
 
 	.navbar .links {
@@ -263,6 +312,12 @@ div.section{
 		text-align: left;
 		width: 100vw;
 		height: 50px;
+	}
+
+
+	.section .image{
+		width: 100%;
+		min-width: 300px;
 	}
 	
 }
