--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@ div.footer{
 div.landing{
 	grid-column: 2;
 
-	margin-top: 50px;
+	margin-top: 100px;
 	min-height: 85vh;
 
 	display: flex;
@@ -258,8 +258,6 @@ div.section{
 
 
 .section h1, .section .content, .section .image{
-	margin: 0;
-	padding: 0;
 	background-color: #eee;
 }
 
@@ -271,8 +269,7 @@ div.section{
 
 .section div.content{
 	width: 60%;
-	min-width: 500px;
-
+	min-width: 400px;
 }
 
 .section .image{
@@ -280,7 +277,14 @@ div.section{
 	min-width: 300px;
 	display: flex;          /* Make .image a flex container */
 	justify-content: center;  /* Horizontally center */
-	align-items: center; 
+	align-items: left; 
+}
+
+.section div.square{
+	width: 30%;
+	min-width: 425px;
+	margin: auto;
+
 }
 
 
@@ -318,6 +322,9 @@ div.section{
 	.section .image{
 		width: 100%;
 		min-width: 300px;
+
+		align-items: center;
+		justify-content: center;
 	}
 	
 }
